--- a/БД_АВТОРИЗАЦИЯ/MainWindow.xaml
+++ b/БД_АВТОРИЗАЦИЯ/MainWindow.xaml
@@ -17,7 +17,20 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
+        <StackPanel Margin="0,0,0,359" VerticalAlignment="Top" Orientation="Horizontal" HorizontalAlignment="Center" Grid.RowSpan="2" Width="798" Grid.Column="1">
+            <Image Source="/Картинки/колос2.png" Width="151" Height="52"/>
+            <TextBlock Text="Добро пожаловать в Пекарню!" 
+                       FontSize="30" 
+                       FontWeight="Bold" 
+                       Foreground="#8B4513" 
+                       Margin="0,7,0,10" Height="44" Width="511"/>
+            <Image Source="/Картинки/колос2.png"  Width="234" Height="52" >
+                <Image.RenderTransform>
+                    <ScaleTransform ScaleX="-1" />
+                </Image.RenderTransform>
+            </Image>
 
-        <Frame Grid.Row="1" Name="MainFrame" NavigationUIVisibility="Hidden" ContentRendered="MainFrame_ContentRendered" ></Frame>
+        </StackPanel>
+        <Frame Name="MainFrame" NavigationUIVisibility="Hidden" Grid.ColumnSpan="3" Margin="0,5,0,10" Grid.Row="1"/>
     </Grid>
 </Window>
