--- a/БД_АВТОРИЗАЦИЯ/Авторизация.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Авторизация.xaml
@@ -8,19 +8,25 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Авторизация">
 
-    <Grid>
-        <!-- Frame для отображения других страниц -->
-        <Frame x:Name="SecondFrame"  NavigationUIVisibility="Hidden" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
 
-        <!-- StackPanel для элементов авторизации -->
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="200">
-            <TextBlock Text="Логин:" Margin="0,0,0,5" FontSize="20" HorizontalAlignment="Center"/>
-            <TextBox x:Name="LoginTextBox" Height="23" Width="200" Margin="0,0,0,10"/>
+    <Grid Background="#F3F4F6">
+        <Frame x:Name="SecondFrame" NavigationUIVisibility="Hidden" />
 
-            <TextBlock Text="Пароль:" Margin="0,0,0,5" FontSize="20" HorizontalAlignment="Center"/>
-            <PasswordBox x:Name="PasswordBox" Height="23" Width="200" Margin="0,0,0,10"/>
+        <Image Source="/Картинки/колос2.png" Stretch="UniformToFill" Opacity="0.25" />
 
-            <Button Content="Войти" Height="50" Width="200" Margin="0,30,0,10" Click="LoginButton_Click"/>
-        </StackPanel>
+        <Border Background="White" CornerRadius="15" BorderBrush="#CCCCCC" BorderThickness="1" Padding="20" HorizontalAlignment="Center" VerticalAlignment="Center" Width="350" Height="350" >
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" >
+
+                <TextBlock Text="Авторизация" FontSize="24" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center" Margin="0,-50,0,0"/>
+
+                <TextBlock Text="Логин:" FontSize="16" FontWeight="Bold"  Foreground="#333333" HorizontalAlignment="Center"/>
+                <TextBox x:Name="LoginTextBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center"/>
+
+                <TextBlock Text="Пароль:" FontSize="16" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center"/>
+                <PasswordBox x:Name="PasswordBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center"/>
+
+                <Button Content="Войти" Height="45" Width="300" Margin="0,30,0,10" Background="#4CAF50" Foreground="White" BorderBrush="Transparent" BorderThickness="1" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Cursor="Hand" Click="LoginButton_Click"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </Page>
