--- a/БД_АВТОРИЗАЦИЯ/Авторизация.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Авторизация.xaml
@@ -20,7 +20,7 @@
                 <TextBlock Text="Авторизация" FontSize="24" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center" Margin="0,-50,0,0"/>
 
                 <TextBlock Text="Логин:" FontSize="16" FontWeight="Bold"  Foreground="#333333" HorizontalAlignment="Center"/>
-                <TextBox x:Name="LoginTextBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center"/>
+                <TextBox x:Name="LoginTextBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center" TextChanged="LoginTextBox_TextChanged"/>
 
                 <TextBlock Text="Пароль:" FontSize="16" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center"/>
                 <PasswordBox x:Name="PasswordBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center"/>
