--- a/БД_АВТОРИЗАЦИЯ/Авторизация.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Авторизация.xaml
@@ -2,12 +2,11 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"       
       xmlns:local="clr-namespace:БД_АВТОРИЗАЦИЯ"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Авторизация">
-
 
     <Grid Background="#F3F4F6">
         <Frame x:Name="SecondFrame" NavigationUIVisibility="Hidden" />
@@ -19,11 +18,14 @@
 
                 <TextBlock Text="Авторизация" FontSize="24" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center" Margin="0,-50,0,0"/>
 
-                <TextBlock Text="Логин:" FontSize="16" FontWeight="Bold"  Foreground="#333333" HorizontalAlignment="Center"/>
-                <TextBox x:Name="LoginTextBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center" TextChanged="LoginTextBox_TextChanged"/>
-
+                <TextBlock Text="Логин:" FontSize="16" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center"/>
+                <Grid>
+                    <TextBox x:Name="LoginTextBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center" ToolTip="Введите логин" TextChanged="LoginTextBox_TextChanged"/>
+                    <TextBlock x:Name="WatermarkText" Text="Введите логин" Foreground="Gray" VerticalAlignment="Center" HorizontalAlignment="Left" Padding="10,0,0,0" Visibility="Visible"/>
+                </Grid>
+                
                 <TextBlock Text="Пароль:" FontSize="16" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center"/>
-                <PasswordBox x:Name="PasswordBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center"/>
+                <PasswordBox x:Name="PasswordBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center" ToolTip="Введите пароль"/>
 
                 <Button Content="Войти" Height="45" Width="300" Margin="0,30,0,10" Background="#4CAF50" Foreground="White" BorderBrush="Transparent" BorderThickness="1" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Cursor="Hand" Click="LoginButton_Click"/>
             </StackPanel>
