--- a/БД_АВТОРИЗАЦИЯ/MainWindow.xaml
+++ b/БД_АВТОРИЗАЦИЯ/MainWindow.xaml
@@ -18,7 +18,7 @@
             <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Margin="0,0,0,359" VerticalAlignment="Top" Orientation="Horizontal" HorizontalAlignment="Center" Grid.RowSpan="2" Width="798" Grid.Column="1" >
+        <StackPanel x:Name="stackpanel" Margin="0,0,0,359" VerticalAlignment="Top" Orientation="Horizontal" HorizontalAlignment="Center" Grid.RowSpan="2" Width="798" Grid.Column="1" >
             <Button Content="Назад" Width="100" Height="30"  HorizontalAlignment="Left" Margin="10" Click="BackButton_Click" Background="SandyBrown" Grid.Row="0" Grid.Column="0"/>
             <Image Source="/Картинки/колос2.png" Width="151" Height="52"/>
             <TextBlock Text="Добро пожаловать в Пекарню!" 
