--- a/БД_АВТОРИЗАЦИЯ/Роли/_Admin.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Роли/_Admin.xaml
@@ -9,8 +9,19 @@
       Title="_Admin">
 
     <Grid >
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="503">
-            <TextBlock Text="Добро пожаловать Администратор!" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24"/>
-            </StackPanel>
+        <StackPanel>
+            <Button  Height="70" MouseEnter="Button_MouseEnter_1" HorizontalAlignment="Left" MouseLeave="Button_MouseLeave_1" >
+                <Image Source="\Картинки\меню.png" HorizontalAlignment="Center"/>
+            </Button>
+            <StackPanel MouseEnter="___Без_имени__MouseEnter"  MouseLeave="Button_MouseLeave_2" Visibility="Hidden" x:Name="___Без_имени_" Width="70" Orientation="Vertical" Margin="0,5,0,0" HorizontalAlignment="Left">
+                    <Button Content="Button 1" Margin="5" Click="Button1_Click"/>
+                    <Button Content="Button 2" Margin="5" Click="Button2_Click"/>
+                    <Button Content="Button 3" Margin="5" Click="Button3_Click"/>
+                    <Button Content="Button 4" Margin="5" Click="Button4_Click"/>
+                    <Button Content="Button 5" Margin="5" Click="Button5_Click"/>
+                    <Button Content="Button 6" Margin="5" Click="Button6_Click"/>
+                    <Button Content="Button 7" Margin="5" Click="Button7_Click"/>
+                </StackPanel>
+        </StackPanel>
     </Grid>
 </Page>
