--- a/БД_АВТОРИЗАЦИЯ/Authorization.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Authorization.xaml
@@ -1,17 +1,17 @@
-﻿<Page x:Class="БД_АВТОРИЗАЦИЯ.Авторизация"
+﻿<Page x:Class="Bakery_Project.Authorization"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"       
-      xmlns:local="clr-namespace:БД_АВТОРИЗАЦИЯ"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:Bakery_Project"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Авторизация">
+      Title="Authorization">
 
     <Grid Background="#F3F4F6">
         <Frame x:Name="SecondFrame" NavigationUIVisibility="Hidden" />
 
-        <Image Source="/Картинки/колос2.png" Stretch="UniformToFill" Opacity="0.25" />
+        <Image Source="/Images/колос2.png" Stretch="UniformToFill" Opacity="0.25" />
 
         <Border Background="White" CornerRadius="15" BorderBrush="#CCCCCC" BorderThickness="1" Padding="20" HorizontalAlignment="Center" VerticalAlignment="Center" Width="350" Height="350" >
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" >
@@ -23,7 +23,7 @@
                     <TextBox x:Name="LoginTextBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center" ToolTip="Введите логин" TextChanged="LoginTextBox_TextChanged"/>
                     <TextBlock x:Name="WatermarkText" Text="" Foreground="Gray" VerticalAlignment="Center" HorizontalAlignment="Left" Padding="10,0,0,0" Visibility="Visible"/>
                 </Grid>
-                
+
                 <TextBlock Text="Пароль:" FontSize="16" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center"/>
                 <PasswordBox x:Name="PasswordBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center" ToolTip="Введите пароль"/>
 
