--- a/БД_АВТОРИЗАЦИЯ/Authorization.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Authorization.xaml
@@ -20,12 +20,12 @@
 
                 <TextBlock Text="Логин:" FontSize="16" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center"/>
                 <Grid>
-                    <TextBox x:Name="LoginTextBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center" ToolTip="Введите логин" TextChanged="LoginTextBox_TextChanged"/>
+                    <TextBox x:Name="LoginTextBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center" ToolTip="Введите логин" TextChanged="LoginTextBox_TextChanged" Text="admin1"/>
                     <TextBlock x:Name="WatermarkText" Text="" Foreground="Gray" VerticalAlignment="Center" HorizontalAlignment="Left" Padding="10,0,0,0" Visibility="Visible"/>
                 </Grid>
 
                 <TextBlock Text="Пароль:" FontSize="16" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center"/>
-                <PasswordBox x:Name="PasswordBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center" ToolTip="Введите пароль"/>
+                <PasswordBox x:Name="PasswordBox" Height="40" Width="300" Margin="0,0,0,10" BorderBrush="#A8A8A8" BorderThickness="1" Padding="10" VerticalContentAlignment="Center" ToolTip="Введите пароль" Password="1"/>
 
                 <Button Content="Войти" Height="45" Width="300" Margin="0,30,0,10" Background="#4CAF50" Foreground="White" BorderBrush="Transparent" BorderThickness="1" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Cursor="Hand" Click="LoginButton_Click"/>
             </StackPanel>
