--- a/БД_АВТОРИЗАЦИЯ/Roles/_Admin.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Roles/_Admin.xaml
@@ -16,6 +16,7 @@
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="209"/>
+            <ColumnDefinition Width="400"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
@@ -29,7 +30,7 @@
                 </Button.Resources>
             </Button>
 
-            <StackPanel  x:Name="SideMenu" Width="209" Orientation="Vertical" Margin="0,5,0,0" HorizontalAlignment="Left" Height="600" Background="#F5DEB3">
+            <StackPanel  x:Name="SideMenu" Width="209" Orientation="Vertical" Margin="0,5,0,0" HorizontalAlignment="Left" Height="600"  Background="#99F5DEB3">
                 <Button Content="Ингрединеты" Height="30" Margin="3,20" Click="Button_Ingredients_Click" FontSize="12" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
                 <Button Content="Состав Продуктов" Height="30" Margin="3,20" Click="Button_ProductComposition_Click" FontSize="12" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
                 <Button Content="Поставляемые Ингредиенты" Height="30" Margin="3,20" Click="Button_suppliedIngredients_Click" FontSize="12" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
@@ -40,9 +41,15 @@
             </StackPanel>
         </StackPanel>
 
-        <DataGrid Name="DataGrid" Grid.Column="1" Margin="10,73,204,92" AutoGenerateColumns="True"/>
+        <DataGrid Name="DataGrid" Grid.Column="1" Margin="10,73,300,92" AutoGenerateColumns="False" ColumnWidth="*" Grid.ColumnSpan="2" IsReadOnly="False">
+            <DataGrid.Resources>
+                <Style TargetType="DataGridColumnHeader">
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                </Style>
+            </DataGrid.Resources>
+        </DataGrid>
 
-        <Grid Grid.Row="1" Grid.ColumnSpan="2" Background="#F5DEB3">
+        <Grid Grid.Row="1" Grid.ColumnSpan="3" Background="#F5DEB3">
             <TextBlock Text="Вы вошли как Администратор" 
                 FontSize="16" 
                 FontWeight="Bold" 
@@ -51,5 +58,19 @@
                 HorizontalAlignment="Center"
                 Margin="55,0,0,0"/>
         </Grid>
+        <StackPanel x:Name="StackPanel2" Grid.Column="2" Margin="0,80,10,0" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="159" Visibility="Hidden">
+                <TextBlock Text="ID" Margin="5" HorizontalAlignment="Center" FontFamily="Yu Gothic UI Semibold"/>
+                <TextBox x:Name="TextBoxID" Margin="5" Height="20" />
+
+                <TextBlock Text="Название" Margin="5" HorizontalAlignment="Center" FontFamily="Yu Gothic UI Semibold"/>
+                <TextBox x:Name="TextBoxName" Margin="5" Height="20" />
+
+                <Button Content="Добавить" Click="ButtonAdd_Click" Margin="5,15,5,5" Background="LightGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+                <Button Content="Сохранить" Click="ButtonEdit_Click" Margin="5,15,5,5" Background="Khaki" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+                <Button Content="Удалить" Click="ButtonDelete_Click" Margin="5,15,5,5" Background="Tomato" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+                <Button Content="Обновить" Click="ButtonUpdate_Click" Margin="5,15,5,5" Background="YellowGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+                <Button Content="Фильтрация" Click="ButtonFilter_Click" Margin="5,15,5,5" Background="BlanchedAlmond" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+                <Button Content="Отчёты" Click="ButtonReport_Click" Margin="5,15,5,5" Background="SandyBrown" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+        </StackPanel>
     </Grid>
 </Page>
