--- a/БД_АВТОРИЗАЦИЯ/Roles/PurchasingManager.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Roles/PurchasingManager.xaml
@@ -8,9 +8,20 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PurchasingManager">
 
-    <Grid>
+    <Grid PreviewMouseDown="Grid_PreviewMouseDown" Background="Transparent">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="20"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="209"/>
+            <ColumnDefinition Width="400"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
         <StackPanel>
-            <Button  Height="70" MouseEnter="Button_MouseEnter_1" HorizontalAlignment="Left" MouseLeave="Button_MouseLeave_1" >
+            <Button x:Name="MenuButton" Height="70"  HorizontalAlignment="Left" Click="MenuButton_Click">
                 <Image Source="\Images\меню.png" HorizontalAlignment="Center"/>
                 <Button.Resources>
                     <Style TargetType="Border">
@@ -18,15 +29,45 @@
                     </Style>
                 </Button.Resources>
             </Button>
-            <StackPanel MouseEnter="___Без_имени__MouseEnter"  MouseLeave="Button_MouseLeave_2" Visibility="Hidden" x:Name="___Без_имени_" Width="70" Orientation="Vertical" Margin="0,5,0,0" HorizontalAlignment="Left">
-                <Button Content="Button_Ingredients" Margin="5" Click="Button_Ingredients_Click"/>
-                <Button Content="Button_ProductComposition" Margin="5" Click="Button_ProductComposition_Click"/>
-                <Button Content="Button_suppliedIngredients" Margin="5" Click="Button_suppliedIngredients_Click"/>
-                <Button Content="Button_Suppliers" Margin="5" Click="Button_Suppliers_Click"/>
-                <Button Content="Button_Products" Margin="5" Click="Button_Products_Click"/>
-                <Button Content="Button_OrderedProducts" Margin="5" Click="Button_OrderedProducts_Click"/>
-                <Button Content="Button_Orders" Margin="5" Click="Button_Orders_Click"/>
+
+            <StackPanel  x:Name="SideMenu" Width="209" Orientation="Vertical" Margin="0,5,0,0" HorizontalAlignment="Left" Height="600"  Background="#99F5DEB3">
+                <Button Content="Ингрединеты" Height="30" Margin="3,20" Click="Button_Ingredients_Click" FontSize="12" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                <Button Content="Поставляемые Ингредиенты" Height="30" Margin="3,20" Click="Button_suppliedIngredients_Click" FontSize="12" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                <Button Content="Поставщики" Height="30" Margin="3,20" Click="Button_Suppliers_Click" FontSize="12" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
+                <Button Content="Продукты" Height="30" Margin="3,20" Click="Button_Products_Click" FontSize="12" FontFamily="Yu Gothic UI Semibold"  Background="SandyBrown"/>
             </StackPanel>
+        </StackPanel>
+
+        <DataGrid Name="DataGrid" Grid.Column="1" Margin="10,73,300,92" AutoGenerateColumns="False" ColumnWidth="*" Grid.ColumnSpan="2" IsReadOnly="False">
+            <DataGrid.Resources>
+                <Style TargetType="DataGridColumnHeader">
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                </Style>
+            </DataGrid.Resources>
+        </DataGrid>
+
+        <Grid Grid.Row="1" Grid.ColumnSpan="3" Background="#F5DEB3">
+            <TextBlock Text="Вы вошли как Менеджер по закупкам" 
+            FontSize="16" 
+            FontWeight="Bold" 
+            Foreground="#8B4513" 
+            VerticalAlignment="Center" 
+            HorizontalAlignment="Center"
+            Margin="55,0,0,0"/>
+        </Grid>
+        <StackPanel x:Name="StackPanel2" Grid.Column="2" Margin="0,80,10,0" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="159" Visibility="Hidden">
+            <TextBlock Text="ID" Margin="5" HorizontalAlignment="Center" FontFamily="Yu Gothic UI Semibold"/>
+            <TextBox x:Name="TextBoxID" Margin="5" Height="20" />
+
+            <TextBlock Text="Название" Margin="5" HorizontalAlignment="Center" FontFamily="Yu Gothic UI Semibold"/>
+            <TextBox x:Name="TextBoxName" Margin="5" Height="20" />
+
+            <Button Content="Добавить" Click="ButtonAdd_Click" Margin="5,15,5,5" Background="LightGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Сохранить" Click="ButtonEdit_Click" Margin="5,15,5,5" Background="Khaki" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Удалить" Click="ButtonDelete_Click" Margin="5,15,5,5" Background="Tomato" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Обновить" Click="ButtonUpdate_Click" Margin="5,15,5,5" Background="YellowGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Фильтрация" Click="ButtonFilter_Click" Margin="5,15,5,5" Background="BlanchedAlmond" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Button Content="Отчёты" Click="ButtonReport_Click" Margin="5,15,5,5" Background="SandyBrown" Height="30" FontFamily="Yu Gothic UI Semibold"/>
         </StackPanel>
     </Grid>
 </Page>
