--- a/БД_АВТОРИЗАЦИЯ/Authorization.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Authorization.xaml
@@ -13,7 +13,7 @@
 
         <Image Source="/Images/колос2.png" Stretch="UniformToFill" Opacity="0.25" />
 
-        <Border Background="White" CornerRadius="15" BorderBrush="#CCCCCC" BorderThickness="1" Padding="20" HorizontalAlignment="Center" VerticalAlignment="Center" Width="350" Height="350" >
+        <Border Background="White" CornerRadius="15" BorderBrush="#4CAF50" BorderThickness="1" Padding="20" HorizontalAlignment="Center" VerticalAlignment="Center" Width="350" Height="350" >
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" >
 
                 <TextBlock Text="Авторизация" FontSize="24" FontWeight="Bold" Foreground="#333333" HorizontalAlignment="Center" Margin="0,-50,0,0"/>
