--- a/БД_АВТОРИЗАЦИЯ/Roles/PurchasingManager.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Roles/PurchasingManager.xaml
@@ -55,7 +55,7 @@
             HorizontalAlignment="Center"
             Margin="55,0,0,0"/>
         </Grid>
-        <StackPanel x:Name="StackPanel2" Grid.Column="2" Margin="0,80,10,0" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="159" Visibility="Hidden">
+        <StackPanel x:Name="StackPanel2" Grid.Column="2" Margin="0,80,10,0" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="159"  Visibility="Hidden">
             <TextBlock Text="ID" Margin="5" HorizontalAlignment="Center" FontFamily="Yu Gothic UI Semibold"/>
             <TextBox x:Name="TextBoxID" Margin="5" Height="20" />
 
@@ -68,6 +68,7 @@
             <Button Content="Обновить" Click="ButtonUpdate_Click" Margin="5,15,5,5" Background="YellowGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
             <Button Content="Фильтрация" Click="ButtonFilter_Click" Margin="5,15,5,5" Background="BlanchedAlmond" Height="30" FontFamily="Yu Gothic UI Semibold"/>
             <Button Content="Отчёты" Click="ButtonReport_Click" Margin="5,15,5,5" Background="SandyBrown" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <TextBlock Text="{Binding NotificationMessage}" Margin="5,15,5,5" Background="DeepSkyBlue" Height="30" FontFamily="Yu Gothic UI Semibold"/>
         </StackPanel>
     </Grid>
 </Page>
