--- a/БД_АВТОРИЗАЦИЯ/Roles/_Admin.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Roles/_Admin.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:БД_АВТОРИЗАЦИЯ"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="800"
       Title="_Admin">
 
     <Grid PreviewMouseDown="Grid_PreviewMouseDown" Background="Transparent">
@@ -41,19 +41,13 @@
             </StackPanel>
         </StackPanel>
 
-        <DataGrid Name="DataGrid" Grid.Column="1" Margin="10,73,300,92" AutoGenerateColumns="False" ColumnWidth="*" Grid.ColumnSpan="2" IsReadOnly="False">
-            <DataGrid.Resources>
-                <Style TargetType="DataGridColumnHeader">
-                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
-                </Style>
-            </DataGrid.Resources>
-            <!--<DataGrid.ContextMenu>
-                <ContextMenu x:Name="OrderContextMenu" IsEnabled="false">
-                    <MenuItem Header="Отметить как выполненный" Click="MarkOrderAsCompleted" />
-                    <MenuItem Header="Отменить заказ" Click="MarkOrderAsCanceled" />
-                </ContextMenu>
-            </DataGrid.ContextMenu>-->
-        </DataGrid>
+            <DataGrid Name="DataGrid" Grid.Column="1" Margin="10,73,300,590" AutoGenerateColumns="False" ColumnWidth="*" Grid.ColumnSpan="2" IsReadOnly="False" VerticalAlignment="Stretch">
+                <DataGrid.Resources>
+                    <Style TargetType="DataGridColumnHeader">
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                    </Style>
+                </DataGrid.Resources>
+            </DataGrid>
 
         <Grid Grid.Row="1" Grid.ColumnSpan="3" Background="#F5DEB3">
             <TextBlock Text="Вы вошли как Администратор" 
@@ -64,7 +58,7 @@
                 HorizontalAlignment="Center"
                 Margin="55,0,0,0"/>
         </Grid>
-        <StackPanel x:Name="StackPanel2" Grid.Column="2" Margin="0,80,10,0" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="159" Visibility="Hidden">
+        <StackPanel x:Name="StackPanel2" Grid.Column="2" Margin="0,80,10,0" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="159" Visibility="Hidden" >
                 <TextBlock Text="ID" Margin="5" HorizontalAlignment="Center" FontFamily="Yu Gothic UI Semibold"/>
                 <TextBox x:Name="TextBoxID" Margin="5" Height="20" />
 
@@ -77,6 +71,9 @@
                 <Button Content="Обновить" Click="ButtonUpdate_Click" Margin="5,15,5,5" Background="YellowGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
                 <Button Content="Фильтрация" Click="ButtonFilter_Click" Margin="5,15,5,5" Background="BlanchedAlmond" Height="30" FontFamily="Yu Gothic UI Semibold"/>
                 <Button Content="Отчёты" Click="ButtonReport_Click" Margin="5,15,5,5" Background="SandyBrown" Height="30" FontFamily="Yu Gothic UI Semibold"/>
+            <Border Background="#FFA0C7E6" Margin="5,15,5,5" CornerRadius="5">
+                <TextBlock x:Name="TBNotification" Text="{Binding NotificationMessage}" FontFamily="Yu Gothic UI Semibold" TextWrapping="Wrap" MaxWidth="300" TextAlignment="Center" />
+            </Border>
         </StackPanel>
     </Grid>
 </Page>
