--- a/БД_АВТОРИЗАЦИЯ/Roles/_Admin.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Roles/_Admin.xaml
@@ -71,9 +71,13 @@
                 <Button Content="Обновить" Click="ButtonUpdate_Click" Margin="5,15,5,5" Background="YellowGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
                 <Button Content="Фильтрация" Click="ButtonFilter_Click" Margin="5,15,5,5" Background="BlanchedAlmond" Height="30" FontFamily="Yu Gothic UI Semibold"/>
                 <Button Content="Отчёты" Click="ButtonReport_Click" Margin="5,15,5,5" Background="SandyBrown" Height="30" FontFamily="Yu Gothic UI Semibold"/>
-            <Border Background="#FFA0C7E6" Margin="5,15,5,5" CornerRadius="5">
+            
+                <!--<Border Background="#FFA0C7E6" Margin="5,15,5,5" CornerRadius="5">
                 <TextBlock x:Name="TBNotification" Text="{Binding NotificationMessage}" FontFamily="Yu Gothic UI Semibold" TextWrapping="Wrap" MaxWidth="300" TextAlignment="Center" />
-            </Border>
+                </Border>-->
         </StackPanel>
+        <Border x:Name="border" Background="#FFA0C7E6" Margin="31,625,5,5" CornerRadius="5" Grid.Column="2">
+            <TextBox x:Name="TBNotification" IsReadOnly="True" Text="{Binding NotificationMessage}" FontFamily="Yu Gothic UI Semibold" TextWrapping="Wrap" MaxWidth="300" TextAlignment="Center" TextChanged="TBNotification_TextChanged"/>
+        </Border>
     </Grid>
 </Page>
