--- a/БД_АВТОРИЗАЦИЯ/Roles/PurchasingManager.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Roles/PurchasingManager.xaml
@@ -55,7 +55,7 @@
             HorizontalAlignment="Center"
             Margin="55,0,0,0"/>
         </Grid>
-        <StackPanel x:Name="StackPanel2" Grid.Column="2" Margin="0,80,10,0" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="160"  >
+        <StackPanel x:Name="StackPanel2" Grid.Column="2" Margin="0,80,10,0" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Width="160"  Visibility="Hidden">
             <TextBlock Text="ID" Margin="5" HorizontalAlignment="Center" FontFamily="Yu Gothic UI Semibold"/>
             <TextBox x:Name="TextBoxID" Margin="5" Height="20" />
 
@@ -68,9 +68,9 @@
             <Button Content="Обновить" Click="ButtonUpdate_Click" Margin="5,15,5,5" Background="YellowGreen" Height="30" FontFamily="Yu Gothic UI Semibold"/>
             <Button Content="Фильтрация" Click="ButtonFilter_Click" Margin="5,15,5,5" Background="BlanchedAlmond" Height="30" FontFamily="Yu Gothic UI Semibold"/>
             <Button Content="Отчёты" Click="ButtonReport_Click" Margin="5,15,5,5" Background="SandyBrown" Height="30" FontFamily="Yu Gothic UI Semibold"/>
-            <Border Background="#FFA0C7E6" Margin="5,15,5,5" CornerRadius="5">
-                <TextBlock x:Name="TBNotification" Text="{Binding NotificationMessage}" FontFamily="Yu Gothic UI Semibold" TextWrapping="Wrap" MaxWidth="300" TextAlignment="Center" />
-            </Border>
         </StackPanel>
+        <Border x:Name="border" Background="#FFA0C7E6" Margin="70,550,15,41" CornerRadius="5" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Width="159" >
+            <TextBox x:Name="TBNotification" Background="#FFA0C7E6" IsReadOnly="True" Text="{Binding NotificationMessage}" FontFamily="Yu Gothic UI Semibold" TextWrapping="Wrap" MaxWidth="300" TextAlignment="Center" TextChanged="TBNotification_TextChanged" Margin="3,3,3,3"/>
+        </Border>
     </Grid>
 </Page>
