--- a/БД_АВТОРИЗАЦИЯ/Roles/PurchasingManager.xaml
+++ b/БД_АВТОРИЗАЦИЯ/Roles/PurchasingManager.xaml
@@ -16,8 +16,8 @@
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="209"/>
-            <ColumnDefinition Width="400"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="209"/>
         </Grid.ColumnDefinitions>
 
         <StackPanel>
@@ -38,12 +38,24 @@
             </StackPanel>
         </StackPanel>
 
-        <DataGrid Name="DataGrid" Grid.Column="1" Margin="10,73,300,92" AutoGenerateColumns="False" ColumnWidth="*" Grid.ColumnSpan="2" IsReadOnly="False">
+        <DataGrid CanUserAddRows="False" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Column="1" Grid.Row="0" x:Name="DataGrid" AutoGenerateColumns="False"  ColumnWidth="*" IsReadOnly="False" Padding="0,0,0,0">
             <DataGrid.Resources>
                 <Style TargetType="DataGridColumnHeader">
                     <Setter Property="HorizontalContentAlignment" Value="Center"/>
                 </Style>
             </DataGrid.Resources>
+            <DataGrid.Style>
+                <Style TargetType="DataGrid">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Items.Count, ElementName=DataGrid}" Value="0">
+                            <Setter Property="Visibility" Value="Hidden" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding Items.Count, ElementName=DataGrid}" Value="1">
+                            <Setter Property="Visibility" Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.Style>
         </DataGrid>
 
         <Grid Grid.Row="1" Grid.ColumnSpan="3" Background="#F5DEB3">
@@ -69,7 +81,7 @@
             <Button Content="Фильтрация" Click="ButtonFilter_Click" Margin="5,15,5,5" Background="BlanchedAlmond" Height="30" FontFamily="Yu Gothic UI Semibold"/>
             <Button Content="Отчёты" Click="ButtonReport_Click" Margin="5,15,5,5" Background="SandyBrown" Height="30" FontFamily="Yu Gothic UI Semibold"/>
         </StackPanel>
-        <Border x:Name="border" Background="#FFA0C7E6" Margin="70,550,15,41" CornerRadius="5" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Width="159" >
+        <Border x:Name="border" Background="#FFA0C7E6" Margin="0,550,15,0" CornerRadius="5" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Width="171" >
             <TextBox x:Name="TBNotification" Background="#FFA0C7E6" IsReadOnly="True" Text="{Binding NotificationMessage}" FontFamily="Yu Gothic UI Semibold" TextWrapping="Wrap" MaxWidth="300" TextAlignment="Center" TextChanged="TBNotification_TextChanged" Margin="3,3,3,3"/>
         </Border>
     </Grid>
